--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
 Django==1.10.1
-wheel==0.24.0
+django-allauth==0.27.0
+ecdsa==0.13
+Fabric==1.12.0
+fabric-virtualenv==0.3.0
+oauthlib==2.0.0
+paramiko==1.17.2
+psycopg2==2.6.2
+pycrypto==2.6.1
+python-openid==2.2.5
+requests==2.11.1
+requests-oauthlib==0.7.0
