--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+boto==2.42.0
+Collectfast==0.2.3
 Django==1.10.1
 django-allauth==0.27.0
+django-storages==1.5.1
 ecdsa==0.13
 Fabric==1.12.0
 fabric-virtualenv==0.3.0
+gunicorn==19.6.0
 oauthlib==2.0.0
 paramiko==1.17.2
 psycopg2==2.6.2
 pycrypto==2.6.1
+python-dateutil==2.5.3
 python-openid==2.2.5
+pytz==2016.6.1
 requests==2.11.1
 requests-oauthlib==0.7.0
+six==1.10.0
