--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 boto==2.42.0
 Collectfast==0.2.3
 Django==1.10.1
+django-activity-stream==0.6.3
 django-allauth==0.27.0
 django-braces==1.9.0
 django-crispy-forms==1.6.0
 django-guardian==1.4.6
 django-invitations==1.7
+django-jsonfield==1.0.1
 django-model-utils==2.6
 django-notifications-hq==1.2
+django-preserialize==1.1.0
 django-storages==1.5.1
 djangorestframework==3.4.7
 docopt==0.4.0
